# gusto_cantgohome

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  admin_app.py  database.py  public_app.py  schemas.py  settings.py
app/services/: game.py
app/static/: admin.css  admin.js  public.css  public.js
app/templates/admin/: index.html
app/templates/public/: index.html
deploy/: configure-funnel.sh  gusto-admin.service  gusto-public.service  gusto-reconcile.service  gusto-reconcile.timer  install-emma.sh  reconcile-runtime.sh  update-emma.sh
docs/: architecture.md  deployment.md  operations.md
migrations/: 001_initial.sql
scripts/: __init__.py  backup_database.py  import_rankings.py  migrate.py
tests/: conftest.py  test_admin_api.py  test_deploy_runtime.py  test_health.py  test_import_rankings.py  test_public_api.py
tests/e2e/: conftest.py  test_public_ui.py
