[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gusto-cantgohome"
version = "0.1.0"
description = "Shared Gusto top-10 guessing game"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "jinja2>=3.1,<4",
  "openpyxl>=3.1,<4",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "playwright>=1.52,<2",
  "pytest>=8,<10",
  "ruff>=0.11,<1",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = ["e2e: browser-based end-to-end tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
